--- a/css/assets.css
+++ b/css/assets.css
@@ -38,7 +38,7 @@
             box-sizing: border-box;
             padding: 2px;
             border-style: none;
-            min-width: 160px;
+            min-width: 12px;
             aspect-ratio: 16/9;
         }
         .cta_button:hover
@@ -56,5 +56,5 @@
 {
  aspect-ratio: 1/1;  
 }
-
+/* TODO  add a bunch of css class for this */
 
